--- a/css/creative.css
+++ b/css/creative.css
@@ -8,11 +8,16 @@ body {
   height: 100%;
   width: 100%;
 }
+
+html, body {
+  overflow-x:hidden 
+} 
+
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 hr {
-  border-color: #F05F40;
+  border-color: #21e0f3;
   border-width: 3px;
   max-width: 50px;
 }
@@ -43,7 +48,7 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #F05F40;
+  background-color: #21e0f3;
 }
 .bg-dark {
   background-color: #222222;
@@ -74,7 +79,7 @@ aside {
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #F05F40;
+  color: #21e0f3;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -98,11 +103,11 @@ aside {
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #F05F40;
+  color: #21e0f3;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #F05F40 !important;
+  color: #21e0f3 !important;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
@@ -134,7 +139,7 @@ aside {
     border-color: rgba(34, 34, 34, 0.05);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
-    color: #F05F40;
+    color: #21e0f3;
     font-size: 14px;
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -147,7 +152,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
-    color: #F05F40;
+    color: #21e0f3;
   }
 }
 header {
@@ -285,7 +290,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #F05F40;
+  color: #21e0f3;
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
